--- a/nxakberdiyev.html
+++ b/nxakberdiyev.html
@@ -227,7 +227,7 @@
     <div class="business-card">
         <div class="img-area">
             <div class="inner-area">
-                <img src="assets/uzb-gerb.jpg" onerror="this.parentElement.parentElement.style.display='none'; document.querySelector('.coat-of-arms-fallback').style.display='flex';">
+                <img src="uzb-gerb.jpg" onerror="this.parentElement.parentElement.style.display='none'; document.querySelector('.coat-of-arms-fallback').style.display='flex';">
             </div>
         </div>
 
@@ -266,5 +266,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
